# coq-incomplete-games

./: .gitignore  DRAFT_allais_ellsberg.v  HR_algebrique_v2.v  LICENSE  README.md  _CoqProject  algebraic_HR.v  algebraic_HR_2.v  algebraic_HR_ffun.v  coq-incomplete-games-rjcia2021.opam  index.md
.github/workflows/: build.yml  deploy.yml
doc/: README.md  game-forms.md  index.md
doc/game-forms/: index.md
drafts/: DRAFT_allais_ellsberg.v  DRAFT_measures.v  algebraic_HR_ffun.v
src/: algebraic_HR.html  algebraic_HR.v  examples.v
